--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,34 +4,27 @@ jobs:
   go-build:
     runs-on: ubuntu-latest
     steps:
-    - 
-      name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.17
-    - 
-      name: Checkout code
-      uses: actions/checkout@v2
-    - 
-      name: Build
-      run: go build .
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.18
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Build
+        run: go build .
 
   docker-build:
     runs-on: ubuntu-latest
     steps:
-    -
-      name: Checkout
-      uses: actions/checkout@v2
-    -  
-      name: Setup QEMU
-      uses: docker/setup-qemu-action@v1
-    -
-      name: Set up docker Buildx
-      uses: docker/setup-buildx-action@v1
-    -
-      name: Build and push
-      run: |
-        docker buildx build \
-        --platform linux/amd64,linux/arm64 \
-        -t gdrive-upload-action \
-        .
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Build and push
+        run: |
+          docker buildx build \
+          --platform linux/amd64,linux/arm64 \
+          -t gdrive-upload-action \
+          .
