--- a/action.yml
+++ b/action.yml
@@ -1,25 +1,28 @@
-name: 'gdrive-upload-action'
-description: 'Upload a file to Google Drive'
-author: 'Mathis Van Eetvelde'
+name: "gdrive-upload-action"
+description: "Upload a file to Google Drive"
+author: "Mathis Van Eetvelde"
 inputs:
   filename:
-    description: 'the name of the file you want to upload'
+    description: "the name of the file you want to upload"
     required: true
   name:
-    description: 'what you want the file to be called in Google Drive'
+    description: "what you want the file to be called in Google Drive"
     required: false
   folderId:
-    description: 'the Id of the parent folder you want to upload the file in'
+    description: "the Id of the parent folder you want to upload the file in"
     required: true
   credentials:
-    description: 'the service account credentials. Can be base64 encoded.'
+    description: "the service account credentials. Can be base64 encoded."
     required: true
   encoded:
-    description: 'true if the credentials are base64 encoded. false if they are not.'
+    description: "true if the credentials are base64 encoded. false if they are not."
     required: false
   overwrite:
-    description: 'set to true to update an existing file with the same name, or false to create a new file.'
+    description: "set to true to update an existing file with the same name, or false to create a new file."
     required: false
+  mimeType:
+    description: "the mimeType of the file you want to upload"
+    required: true
 
 runs:
   using: docker
